--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                             <h1 class="hero__title">Сергей, Frontend</h1>
 
                             <div class="hero__desc">Telegram: 
-                                <span class="underline">@JSLoverNT</span>
+                                <span class="underline">
+                                    <a href="https://t.me/JSLoverNT">@JSLoverNT</a>
+                                </span>
                             </div>
                             <div class="hero__skills">
                                 <b>Навыки:</b> JS, React, Canvas, Konva, JQuery, БЭМ-нейминг, webpack, gulp
@@ -48,7 +50,7 @@
                     <div class="portf__cards">
                         <div class="card">
                             <div class="card__img">
-                                <img src="" alt="">
+                                <img src="img/1.png" alt="">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Юбилейное.рф</h3>
@@ -58,7 +60,7 @@
                         </div>
                         <div class="card">
                             <div class="card__img">
-                                <img src="" alt="">
+                                <img src="img/2.png" alt="">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">comcity.cocacola-promo.ru</h3>
