--- a/index.html
+++ b/index.html
@@ -48,25 +48,35 @@
                 <div class="portf__inner">
                     <h2 class="portf__title">Портфолио</h2>
                     <div class="portf__cards">
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card__img">
                                 <img src="img/1.png" alt="">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">Юбилейное.рф</h3>
                                 <p class="card__desc">Обновленый сайт печенья "Юбилейное"</p>
-                                <!-- <a href="" class="btn"></a> -->
+                                <a href="" class="btn"></a>
                             </div>
-                        </div>
-                        <div class="card">
+                        </div> -->
+                        <!-- <div class="card">
                             <div class="card__img">
                                 <img src="img/2.png" alt="">
                             </div>
                             <div class="card__text">
                                 <h3 class="card__title">comcity.cocacola-promo.ru</h3>
                                 <p class="card__desc">Промо акция от "Пятерочки"</p>
-                                <!-- <a href="" class="btn"></a> -->
+                                <a href="" class="btn"></a>
                             </div>
+                        </div> -->
+                        <div class="card">
+                            <div class="card__img">
+                                <!-- <img src="img/2.png" alt=""> -->
+                            </div>
+                            <div class="card__text">
+                                <h3 class="card__title">Three.js first steps</h3>
+                                <p class="card__desc">демка для Витали</p>
+                            </div>
+                            <a href="learning-three-js/multicubes/Index.html" class="card__btn">Подробнее</a>
                         </div>
                         
                     </div>
