--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 </span>
                             </div>
                             <div class="hero__skills">
-                                <b>Навыки:</b> JS, React, Canvas, Konva, JQuery, БЭМ-нейминг, webpack, gulp
+                                <b>Навыки:</b> JS, React, Canvas, Konva.js, Three.js, JQuery, БЭМ-нейминг, webpack, gulp
                             </div>
                         </div>
                     </div>
