--- a/canvas/collage/index.html
+++ b/canvas/collage/index.html
@@ -12,6 +12,10 @@
 
 <body>
 	<div class="collage">
+		<div class="collage-hidden">
+			<img src="img/trash.svg" class="collage-hidden__trash">
+			<img src="img/6CbzmM-CLzU.jpg">
+		</div>
 		<div class="collage-inner">
 			<div class="collage__items"></div>
 			<div class="cavnas-here collage__canvas-holder">
@@ -37,7 +41,14 @@
 
 	<script src="collage.js"></script>
 	<script>
-		const allImages = [{
+		const allImages = [
+			{
+				src: 'img/ava-border.png',
+				srcPin: 'img/ava-pin.png',
+				id: 12,
+				type: 'avatar',
+			},
+			{
 				src: 'img/ava-border.png',
 				srcPin: 'img/ava-pin.png',
 				id: 11,
@@ -106,6 +117,17 @@
 				let curtainClass = document.querySelector('.collage-mobile-items').classList
 				curtain.addEventListener('click', function (e) {
 					curtainClass.add('active');
+				})
+
+				document.querySelector('.collage-mobile-items__inner').addEventListener('click', function(e){
+					let curClassList = e.target.classList
+					let curElem = e.target.closest('.collage-item');
+					if(curElem){
+						if(curElem.classList.contains('collage-avatar') && (!curElem.classList.contains('has-photo'))){
+							return
+						}
+						curtainClass.remove('active');
+					}
 				})
 
 				document.querySelector('.collage-mobile-items__close').addEventListener('click', function(e){
