--- a/learning-three-js/voble-sphere/index.html
+++ b/learning-three-js/voble-sphere/index.html
@@ -17,7 +17,10 @@
     </style>
     <!-- <canvas id="scene"></canvas> -->
     <script>
-      new VobleSphere(document.body)
+
+      document.addEventListener('DOMContentLoaded', () => {
+        new VobleSphere(document.body)
+      })
     </script>
   </body>
 </html>
