--- a/learning-three-js/voble-sphere/index.html
+++ b/learning-three-js/voble-sphere/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/threejs-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="threejs-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js + TypeScript + Vite</title>
-    <script type="module" crossorigin src="/assets/js/index-ZchobtkQ.js"></script>
+    <script type="module" crossorigin src="assets/js/index-ZchobtkQ.js"></script>
   </head>
   <body>
     <style>
